fix modal overflow cutoff

--- a/web/assets/picluster-ui.css
+++ b/web/assets/picluster-ui.css
@@ -16,10 +16,6 @@ body {
   height: 100%;
 }
 
-iframe {
-  height: 100%;
-}
-
 h1 {
   font-weight: 200;
   font-size: 3rem;
@@ -239,7 +235,9 @@ textarea {
 #iframe_a {
   display: block;
   border-width: 0px;
+  height: 100%
   width:100%;
+  overflow-y: scroll;
 }
 
 #logo {
